--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,13 @@
         <h1>Studi<span>on</span> <span>Eventos</span></h1>
         <ul>
             <li>
-                <a href="#empresa">Empresa</a>
+                <a href="https://www.w3schools.com">Empresa</a>
             </li>
             <li>
-                <a href="#eventos">Eventos</a>
+                <a href="https://www.w3schools.com">Eventos</a>
             </li>
             <li>
-                <a href="#galeria">Galeria</a>
-            </li>
-            <li>
-                <a href="#depoimentos">Depoimentos</a>
+                <a href="https://www.w3schools.com">Depoimentos</a>
             </li>
             <li>
                 <a href="https://www.w3schools.com">Contatos</a>
