--- a/index.html
+++ b/index.html
@@ -8,25 +8,89 @@
 </head>
 <body>
     <nav>
-        <h1>Studi<span>on</span> <span>Eventos</span></h1>
+        <h1>Studi<span>On</span> <span>Eventos</span></h1>
         <ul>
             <li>
-                <a href="#empresa">Empresa</a>
+                <a href="#empresa">
+                    Empresa
+                </a>
             </li>
             <li>
-                <a href="#eventos">Eventos</a>
+                <a href="#eventos">
+                    Eventos
+                </a>
             </li>
             <li>
-                <a href="#galeria">Galeria</a>
+                <a href="#galeria">
+                    Galeria
+                </a>
             </li>
             <li>
-                <a href="#depoimentos">Depoimentos</a>
+                <a href="#depoimentos">
+                    Depoimentos
+                </a>
             </li>
             <li>
-                <a href="https://www.w3schools.com">Contatos</a>
+                <a href="https://www.w3schools.com">
+                    Contatos
+                </a>
             </li>
         </ul>
     </nav>
-    
+    <header>
+        <div id="slider">
+            <div class="slide">
+                <h6><span>Próximo evento</span> - Dia 25/Setembro as 19:00h</h6>
+                <h2><span>Creative</span> Minds</h2>
+                <button>Saiba Mais</button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <ul>
+                <li><h3>+ de 500 </h3>eventos realizados</li>
+                <li><h3>+ de 1.000.000 </h3>de ingressos vendidos</li>
+                <li><h3>+ de 300 </h3>empresas atendidas</li>
+            </ul>
+        </section>
+        <section>
+            <div>
+                <img src="./src/images/institutional.jpg"/>
+                <h6>Fazemos o seu evento acontecer</h6>
+                <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio veniam
+                amet autem alias fugiat, labore laborum ex soluta dolores quidem vel
+                dolorem facilis enim tempora doloremque exercitacionem omnis reprehenderit
+                velit.</p>
+                <button>Saiba mais</button>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h6>Você informa a temática e nós planejamos um evento com tecnologia e</h6>
+                <h2><span>Muito + </span>Diversão</h2>
+                <button>Fazer cotação</button>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <h2>Studi<span>on</span> <span>Eventos</span></h2>
+        <form>
+            <label>|Receba news e promoções</label>
+            <input type="email" placeholder="email" />
+            <button type="submit">Enviar</button>
+        </form>
+        <ul>
+            <li><a href="https://facebook.com/" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+            <li><a href="https://youtube.com/" target="_blank">Youtube</a></li>
+        </ul>
+        <hr />
+        <p>
+            <small>Studi<span>On</span> - Todos os direitos reservados.</small>
+        </p>
+    </footer>
 </body>
 </html>
