--- a/index.html
+++ b/index.html
@@ -41,15 +41,24 @@
             </li>
         </ul>
     </nav>
+
     <header>
         <div id="slider">
             <div class="slide">
-                <h6><span>Próximo evento</span> - Dia 25/Setembro as 19:00h</h6>
-                <h2><span>Creative</span> Minds</h2>
-                <button>Saiba Mais</button>
+                <img 
+                class="slide__background_image" 
+                src="./src/images/banner.jpg" 
+                alt="Studion Banner"
+                />
+                <div class="slide__copy">
+                    <h6><span>Próximo evento</span> - Dia 25/Setembro as 19:00h</h6>
+                    <h2><span>Creative</span> Minds</h2>
+                    <button>Saiba Mais</button>
+                </div>
             </div>
         </div>
     </header>
+
     <main>
         <section>
             <ul>
