Logo face-twitter-youtube

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>StudiOn</title>
 </head>
 <body>
@@ -93,11 +94,15 @@
                 <button class="btn btn--institutional">Saiba mais</button>
             </div>
         </section>
-        <section>
-            <div>
-                <h6>Você informa a temática e nós planejamos um evento com tecnologia e</h6>
-                <h2><span>Muito + </span>Diversão</h2>
-                <button>Fazer cotação</button>
+        <section class="quote">
+            <div class="container quote__container">
+                <div class="quote__copy">
+                    <h6>Você informa a temática e nós planejamos um evento com tecnologia e</h6>
+                    <h2>
+                        <span class="copy--primary">Muito + </span>Diversão
+                    </h2>
+                    <button class="btn btn--quote">Fazer cotação</button>
+                </div>
             </div>
         </section>
 
@@ -110,9 +115,24 @@
             <button type="submit">Enviar</button>
         </form>
         <ul>
-            <li><a href="https://facebook.com/" target="_blank">Facebook</a></li>
-            <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
-            <li><a href="https://youtube.com/" target="_blank">Youtube</a></li>
+            <li>
+                <a href="https://facebook.com/" target="_blank">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank">
+                    <span class="fa-stack">
+                        <i class="fas fa-circle fa-stack-2x fa-inverse"></i>
+                        <i class="fab fa-twitter fa-stack-1x"></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com/" target="_blank">
+                    <i class="far fa-play-circle fa-2x"></i>
+                </a>
+            </li>
         </ul>
         <hr />
         <p>
