--- a/src/index.html
+++ b/src/index.html
@@ -17,27 +17,27 @@
             </h1>
             <ul class="navbar__links">
                 <li>
-                    <a href="#empresa">
+                    <a href="interprise.html">
                         Empresa
                     </a>
                 </li>
                 <li>
-                    <a href="#eventos">
+                    <a href="events.html">
                         Eventos
                     </a>
                 </li>
                 <li>
-                    <a href="#galeria">
+                    <a href="gallery.html">
                         Galeria
                     </a>
                 </li>
                 <li>
-                    <a href="#depoimentos">
+                    <a href="testimonial.html">
                         Depoimentos
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.w3schools.com">
+                    <a href="contact.html">
                         Contatos
                     </a>
                 </li>
