--- a/src/contact.html
+++ b/src/contact.html
@@ -12,8 +12,10 @@
     <nav class="navbar">
         <div class="container navbar__container">
             <h1 class="logo-studion">
+                <a href="index.html">
                 Studi<span class="copy--primary">On</span> 
                 <span class="logo-studion__subtitle">Eventos</span>
+                </a>
             </h1>
             <ul class="navbar__links">
                 <li>
@@ -37,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.w3schools.com">
+                    <a class="active" href="">
                         Contatos
                     </a>
                 </li>
@@ -47,7 +49,7 @@
 
     <header>
         <div class="hero">
-            <img src="./images/contact.jpg" alt="" class="hero__background" />
+            <img src="./src/images/contact.jpg" alt="" class="hero__background"/>
             <div class="container hero__container">
                 <div class="hero__copy">
                     <h2>.contato</h2>
@@ -92,9 +94,8 @@
         
         <section class="maps">
 
-
         </section>
-        
+
     </main>
 
     <footer class="footer">
