--- a/src/contact.html
+++ b/src/contact.html
@@ -49,7 +49,7 @@
 
     <header>
         <div class="hero">
-            <img src="./src/images/contact.jpg" alt="" class="hero__background"/>
+            <img src="./images/contact.jpg" alt="" class="hero__background"/>
             <div class="container hero__container">
                 <div class="hero__copy">
                     <h2>.contato</h2>
