--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             <div class="slide">
                 <img 
                 class="slide__background_image" 
-                src="./src/images/banner.jpg" 
+                src="./images/banner.jpg" 
                 alt="Studion Banner"
                 />
                 <div class="slide__copy">
@@ -82,8 +82,9 @@
                 </li>
             </ul>
         </section>
+
         <section class="container institutional">
-            <img class="institutional__image" src="./src/images/institutional.jpg" alt="Studion Institutional Image"/>
+            <img class="institutional__image" src="./images/institutional.jpg" alt="Studion Institutional Image"/>
             <div class="institutional__copy">
                 <h6>Fazemos o seu evento acontecer</h6>
                 <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h4>
@@ -94,6 +95,7 @@
                 <button class="btn btn--institutional">Saiba mais</button>
             </div>
         </section>
+
         <section class="quote">
             <div class="container quote__container">
                 <div class="quote__copy">
@@ -105,8 +107,8 @@
                 </div>
             </div>
         </section>
-
     </main>
+
     <footer class="footer">
         <div class="container footer__container">
             <h2 class="logo-studion">
@@ -150,5 +152,7 @@
             <small>Studi<span class="copy--primary">ON</span> - Todos os direitos reservados.</small>
         </p>
     </footer>
+
 </body>
+
 </html>
