--- a/src/interprise.html
+++ b/src/interprise.html
@@ -19,7 +19,7 @@
             </h1>
             <ul class="navbar__links">
                 <li>
-                    <a href="http://127.0.0.1:8080/interprise.html">
+                    <a class="active" href="http://127.0.0.1:8080/interprise.html">
                         Empresa
                     </a>
                 </li>
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="active" href="http://127.0.0.1:8080/contact.html">
+                    <a href="http://127.0.0.1:8080/contact.html">
                         Contatos
                     </a>
                 </li>
@@ -49,10 +49,10 @@
 
     <header>
         <div class="hero">
-            <img src="./images/contact.jpg" alt="" class="hero__background"/>
+            <img src="./images/interprise.jpg" alt="" class="hero__background"/>
             <div class="container hero__container">
                 <div class="hero__copy">
-                    <h2>.contato</h2>
+                    <h2>.empresa</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vitae pariatur labore suscipit ab animi rem dolores atque sequi. Voluptatibus animi rem perspiciatis hic facere, id fugiat perferendis? Quidem, sit!</p>
                 </div>
             </div>
@@ -60,23 +60,18 @@
     </header>
 
     <main>
-        <section class="contact">
-            <section class="contact__info">
-                <div class="contact__info__container">    
-                    <h3>Liga pra gente</h3>
-                    <span>
-                        <i class="fas fa-phone fa-flip-horizontal "></i>
-                        <p> +55 (48) 3223 - 5769</p>
-                    </span>
-                    <span>
-                        <i class="fab fa-whatsapp"></i>
-                        <p> +55 (48) 99943 - 7777</p>
-                    </span>
-                    <h3>Venha conhecer a nossa casa</h3>
-                    <span>
-                        <i class="fas fa-map-marker-alt "></i>
-                        Rua Miguel Daux, 129 - Coqueiros Florianópolis / SC
-                    </span>
+        <section class="interprise">
+            <section class="interprise__info">
+                <img src="./images/Picture_interprise.jpg" alt="" class="Picture__background" />
+                <div class="interprise__info__container">    
+                    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quae ipsam odio perspiciatis voluptate obcaecati molestiae quaerat quos explicabo deleniti enim fugit culpa repellendus nisi a, fuga error vel impedit.</p>
+                        <p> Minima cumque natus, reprehenderit debitis facere soluta quam doloremque. Rerum architecto obcaecati nemo! Iste quam totam consequuntur saepe, expedita animi natus ea.</p>
+                </div>
+            </section>
+            <section class="logos">
+                <div>
+                    <img src="./images/logos.jpg" alt="" class="Logos__background" />
                 </div>
             </section>
 
